--- a/Responsive Sliding Login and Registration Forms/Project 01/LoginRegister.html
+++ b/Responsive Sliding Login and Registration Forms/Project 01/LoginRegister.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
+		<title>Responsive Sliding Login and Registration Forms</title>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
